Time Zone Component added

--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -1,143 +1,143 @@
-.c-red {
-  color: var(--portRed) !important;
-}
+// .c-red {
+//   color: var(--portRed) !important;
+// }
 
-.c-lightRed {
-  color: var(--portLightRed) !important;
-}
+// .c-lightRed {
+//   color: var(--portLightRed) !important;
+// }
 
-.c-blue {
-  color: var(--portBlue) !important;
-}
+// .c-blue {
+//   color: var(--portBlue) !important;
+// }
 
-.c-skyblue {
-  color: var(--portSkyblue) !important;
-}
+// .c-skyblue {
+//   color: var(--portSkyblue) !important;
+// }
 
-.c-paleBlue {
-  color: var(--portPaleBlue) !important;
-}
+// .c-paleBlue {
+//   color: var(--portPaleBlue) !important;
+// }
 
-.c-darkBlue {
-  color: var(--portDarkBlue) !important;
-}
+// .c-darkBlue {
+//   color: var(--portDarkBlue) !important;
+// }
 
-.c-purple {
-  color: var(--portPurple) !important;
-}
+// .c-purple {
+//   color: var(--portPurple) !important;
+// }
 
-.c-lightGreen {
-  color: var(--portLightGreen) !important;
-}
+// .c-lightGreen {
+//   color: var(--portLightGreen) !important;
+// }
 
-.c-paleGreen {
-  color: var(--portPaleGreen) !important;
-}
+// .c-paleGreen {
+//   color: var(--portPaleGreen) !important;
+// }
 
-.c-green {
-  color: var(--portGreen) !important;
-}
+// .c-green {
+//   color: var(--portGreen) !important;
+// }
 
-.c-lightOrange {
-  color: var(--portLightOrange) !important;
-}
+// .c-lightOrange {
+//   color: var(--portLightOrange) !important;
+// }
 
-.c-orange {
-  color: var(--portOrange) !important;
-}
+// .c-orange {
+//   color: var(--portOrange) !important;
+// }
 
-.c-brown {
-  color: var(--portBrown) !important;
-}
+// .c-brown {
+//   color: var(--portBrown) !important;
+// }
 
-.c-darkGrey {
-  color: var(--portDarkGrey) !important;
-}
+// .c-darkGrey {
+//   color: var(--portDarkGrey) !important;
+// }
 
-.c-grey {
-  color: var(--portGrey) !important;
-}
+// .c-grey {
+//   color: var(--portGrey) !important;
+// }
 
-.c-paleGrey {
-  color: var(--portPaleGrey) !important;
-}
+// .c-paleGrey {
+//   color: var(--portPaleGrey) !important;
+// }
 
-.c-lightGrey {
-  color: var(--portLightGrey) !important;
-}
+// .c-lightGrey {
+//   color: var(--portLightGrey) !important;
+// }
 
-.c-white {
-  color: var(--portWhite) !important;
-}
+// .c-white {
+//   color: var(--portWhite) !important;
+// }
 
-.bg-red {
-  background-color: var(--portRed) !important;
-}
+// .bg-red {
+//   background-color: var(--portRed) !important;
+// }
 
-.bg-lightRed {
-  background-color: var(--portLightRed) !important;
-}
+// .bg-lightRed {
+//   background-color: var(--portLightRed) !important;
+// }
 
-.bg-blue {
-  background-color: var(--portBlue) !important;
-}
+// .bg-blue {
+//   background-color: var(--portBlue) !important;
+// }
 
-.bg-skyblue {
-  background-color: var(--portSkyblue) !important;
-}
+// .bg-skyblue {
+//   background-color: var(--portSkyblue) !important;
+// }
 
-.bg-paleBlue {
-  background-color: var(--portPaleBlue) !important;
-}
+// .bg-paleBlue {
+//   background-color: var(--portPaleBlue) !important;
+// }
 
-.bg-darkBlue {
-  background-color: var(--portDarkBlue) !important;
-}
+// .bg-darkBlue {
+//   background-color: var(--portDarkBlue) !important;
+// }
 
-.bg-purple {
-  background-color: var(--portPurple) !important;
-}
+// .bg-purple {
+//   background-color: var(--portPurple) !important;
+// }
 
-.bg-lightGreen {
-  background-color: var(--portLightGreen) !important;
-}
+// .bg-lightGreen {
+//   background-color: var(--portLightGreen) !important;
+// }
 
-.bg-paleGreen {
-  background-color: var(--portPaleGreen) !important;
-}
+// .bg-paleGreen {
+//   background-color: var(--portPaleGreen) !important;
+// }
 
-.bg-green {
-  background-color: var(--portGreen) !important;
-}
+// .bg-green {
+//   background-color: var(--portGreen) !important;
+// }
 
-.bg-lightOrange {
-  background-color: var(--portLightOrange) !important;
-}
+// .bg-lightOrange {
+//   background-color: var(--portLightOrange) !important;
+// }
 
-.bg-orange {
-  background-color: var(--portOrange) !important;
-}
+// .bg-orange {
+//   background-color: var(--portOrange) !important;
+// }
 
-.bg-brown {
-  background-color: var(--portBrown) !important;
-}
+// .bg-brown {
+//   background-color: var(--portBrown) !important;
+// }
 
-.bg-darkGrey {
-  background-color: var(--portDarkGrey) !important;
-}
+// .bg-darkGrey {
+//   background-color: var(--portDarkGrey) !important;
+// }
 
-.bg-grey {
-  background-color: var(--portGrey) !important;
-}
+// .bg-grey {
+//   background-color: var(--portGrey) !important;
+// }
 
-.bg-paleGrey {
-  background-color: var(--portPaleGrey) !important;
-}
+// .bg-paleGrey {
+//   background-color: var(--portPaleGrey) !important;
+// }
 
-.bg-lightGrey {
-  background-color: var(--portLightGrey) !important;
-}
+// .bg-lightGrey {
+//   background-color: var(--portLightGrey) !important;
+// }
 
-.bg-white {
-  background-color: var(--portWhite) !important;
-}
+// .bg-white {
+//   background-color: var(--portWhite) !important;
+// }
