ng update Material v18 to v19

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,7 +16,7 @@
             <mat-icon aria-hidden="false" aria-label="Time Zone Icon">schedule</mat-icon>
         </button>
     </mat-drawer>
-    <mat-drawer-content class="pt-3">
+    <mat-drawer-content class="pt-3 ml-0">
         <div class="px-5">
             <router-outlet></router-outlet>
         </div>
