--- a/src/m3-theme.scss
+++ b/src/m3-theme.scss
@@ -139,8 +139,10 @@ $light-theme: mat.define-theme((color: (theme-type: light,
         primary: $_primary,
         tertiary: $_tertiary,
         use-system-variables: true,
+    system-variables-prefix: sys,
       ),
       typography: (use-system-variables: true,
+    system-variables-prefix: sys,
         brand-family: "Open Sans",
         plain-family: "Open Sans"
       ),
@@ -149,8 +151,10 @@ $dark-theme: mat.define-theme((color: (theme-type: dark,
         primary: $_primary,
         tertiary: $_tertiary,
         use-system-variables: true,
+    system-variables-prefix: sys,
       ),
       typography: (use-system-variables: true,
+    system-variables-prefix: sys,
         brand-family: "Open Sans",
         plain-family: "Open Sans"
       ),
