--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,8 @@
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 
 
@@ -17,8 +18,10 @@
 //         primary: mat.$azure-palette,
 //         tertiary: mat.$blue-palette,
 //         use-system-variables: true,
+// system-variables-prefix: sys,
 //       ),
 //       typography: (use-system-variables: true,
+// system-variables-prefix: sys,
 //         brand-family: "Open Sans",
 //         plain-family: "Open Sans"
 //       ),
