--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -19,28 +19,31 @@
         </ul>
     </div> -->
 
-    <div class="cardsList">
+    <mat-grid-list [cols]="gridColumns()" rowHeight="160" gutterSize="0">
+        <!-- class="cardsList" -->
         @for(skill of resume().skills; track skill.name){
-        <mat-card appearance="outlined" class="matCard">
-            <mat-card-header>
-                <mat-card-subtitle>{{skill.name}}</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-content>
-                <mat-chip-set aria-label="Skills List" id="skillImageDiv">
-                    @for(keyword of skill.keywords; track keyword){
-                    <div mat-card-avatar class="example-header-image" class="mt-2 mr-2" [matTooltip]="keyword">
-                        <img src="./assets/skills/{{keyword}}.svg" class="skillImage" />
-                        <!-- @if( keyword.icon){
+        <mat-grid-tile class="p-0">
+            <mat-card appearance="outlined" class="matCard">
+                <mat-card-header>
+                    <mat-card-subtitle>{{skill.name}}</mat-card-subtitle>
+                </mat-card-header>
+                <mat-card-content>
+                    <mat-chip-set aria-label="Skills List" id="skillImageDiv">
+                        @for(keyword of skill.keywords; track keyword){
+                        <div mat-card-avatar class="example-header-image" class="mt-2 mr-2" [matTooltip]="keyword">
+                            <img src="./assets/skills/{{keyword}}.svg" class="skillImage" />
+                            <!-- @if( keyword.icon){
                         <span class="material-icons">{{keyword.icon}}</span>
                         } @else {
                         } -->
 
-                    </div>
-                    }
-                </mat-chip-set>
-            </mat-card-content>
-        </mat-card>
+                        </div>
+                        }
+                    </mat-chip-set>
+                </mat-card-content>
+            </mat-card>
+        </mat-grid-tile>
         }
-    </div>
+    </mat-grid-list>
 
 </div>
