Assests folder - Production - Path issue

--- a/src/app/modules/portfolio/portfolio.component.html
+++ b/src/app/modules/portfolio/portfolio.component.html
@@ -31,7 +31,7 @@
                     <mat-chip-set aria-label="Skills List" id="skillImageDiv">
                         @for(keyword of skill.keywords; track keyword){
                         <div mat-card-avatar class="example-header-image" class="mt-2 mr-2" [matTooltip]="keyword">
-                            <img src="./assets/skills/{{keyword}}.svg" class="skillImage" />
+                            <img src="assets/skills/{{keyword}}.svg" class="skillImage" />
                             <!-- @if( keyword.icon){
                         <span class="material-icons">{{keyword.icon}}</span>
                         } @else {
