Changed Routes to Dynamic and created Form Builder Module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,11 @@
 <mat-drawer-container class="mainContainer">
     <mat-drawer mode="side" opened class="pt-3">
-        <button mat-icon-button routerLink="/" aria-label="Home Icon Button" class="mr-5" matTooltip="Home">
-            <mat-icon aria-hidden="false" aria-label="Home Icon">home</mat-icon>
+        @for (item of routingList; track $index) {
+        <button mat-icon-button [routerLink]="item.link" [attr.aria-label]="item.label + ' Icon Button'" class="mr-5"
+            [matTooltip]="item.label">
+            <mat-icon aria-hidden="false" [attr.aria-label]="item.label + ' Icon'" >{{item.icon}}</mat-icon>
         </button>
-        <button mat-icon-button routerLink="/experience" aria-label="Experience Calculator Icon Button" class="mr-5"
-            matTooltip="Experience Calculator">
-            <mat-icon aria-hidden="false" aria-label="Experience Calculator Icon">work_history</mat-icon>
-        </button>
-        <button mat-icon-button routerLink="/calculator" aria-label="Percentage Increase Calculator Icon Button" class="mr-5"
-            matTooltip="Percentage Increase Calculator">
-            <mat-icon aria-hidden="false" aria-label="Percentage Increase Calculator Icon">calculate</mat-icon>
-        </button>
-        <button mat-icon-button routerLink="/timezoneconverter" aria-label="Time Zone Icon Button" class="mr-5"
-            matTooltip="Time Zone Converterr">
-            <mat-icon aria-hidden="false" aria-label="Time Zone Icon">schedule</mat-icon>
-        </button>
+        }
     </mat-drawer>
     <mat-drawer-content class="pt-3">
         <div class="px-5">
