--- a/src/app/modules/timezone-converter/timezone-converter.component.html
+++ b/src/app/modules/timezone-converter/timezone-converter.component.html
@@ -1,7 +1,5 @@
 <div>
-
-
-    <form [formGroup]="timeForm">
+    <form [formGroup]="timeForm" class="p-5">
         <div data-layout="row wrap" data-layout-align="start start" class="mb-5">
             <div class="fromToText pt-2">From</div>
             <div data-layout="row wrap" data-layout-align="start start" data-layout-gap="8px" class="mb-5"
