--- a/src/styles.scss
+++ b/src/styles.scss
@@ -70,26 +70,26 @@ body {
   min-width: 350px;
 }
 
-// :root {
-//   --portRed: #ef5b5b;
-//   --portLightRed: #f95f6f;
-//   --portBlue: #5838ff;
-//   --portSkyBlue: #529fe1;
-//   --portPaleBlue: #f1f8ff;
-//   --portDarkBlue: #3d20dd;
-//   --portPurple: #7d62ef;
-//   --portLightGreen: #2dce98;
-//   --portPaleGreen: #30dbb5;
-//   --portGreen: #26be77;
-//   --portLightOrange: #fda341;
-//   --portOrange: #f48665;
-//   --portBrown: #7f7f7f;
-//   --portDarkGrey: #3e566d;
-//   --portGrey: #7e92a4;
-//   --portPaleGrey: #f6f8ff;
-//   --portLightGrey: #eff3fe;
-//   --portWhite: #ffffff;
-//   --portBlack: #354053;
-//   --c-primary-color: #146ef6;
-//   --c-secondary-color: #cacacc;
-// }
+:root {
+  --portRed: #ef5b5b;
+  --portLightRed: #f95f6f;
+  --portBlue: #5838ff;
+  --portSkyBlue: #529fe1;
+  --portPaleBlue: #f1f8ff;
+  --portDarkBlue: #3d20dd;
+  --portPurple: #7d62ef;
+  --portLightGreen: #2dce98;
+  --portPaleGreen: #30dbb5;
+  --portGreen: #26be77;
+  --portLightOrange: #fda341;
+  --portOrange: #f48665;
+  --portBrown: #7f7f7f;
+  --portDarkGrey: #3e566d;
+  --portGrey: #7e92a4;
+  --portPaleGrey: #f6f8ff;
+  --portLightGrey: #eff3fe;
+  --portWhite: #ffffff;
+  --portBlack: #354053;
+  --c-primary-color: #146ef6;
+  --c-secondary-color: #cacacc;
+}
